# fast-api-project-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: health.py
app/core/: config.py  logging.py  version.py
app/db/: base.py  session.py  uow.py
migrations/: env.py  script.py.mako
tests/: conftest.py  test_health.py
